<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    >
    <TextView
        android:layout_alignParentTop="true"
        android:id="@+id/tv2"
        android:text="@string/scr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        />
<Button

    android:layout_alignParentLeft="true"
    android:layout_below="@id/tv2"
    android:id="@+id/btn2"
    android:onClick="onClickBtn2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn2"/>
    <Button
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv2"
        android:id="@+id/btn4"
        android:onClick="onClickBtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4"/>
</RelativeLayout>
